# vision_utils_with_wb

./: .gitignore  experiments.ipynb  main.py  pyproject.toml
vision_utils/: .gitignore  grad_cam.py  main.py  plotting.py  pyproject.toml  requirements.txt  test.ipynb  test.py
vision_utils/configs/: config.yaml  train.yaml
vision_utils/configs/criterion/: cross_entropy.yaml
vision_utils/configs/data/: mnist.yaml
vision_utils/configs/logging/: base.yaml
vision_utils/configs/model/: simple_cnn.yaml
vision_utils/configs/optimizer/: adam.yaml  sgd.yaml
vision_utils/configs/trainer/: default.yaml
vision_utils/data/: datamodule.py
vision_utils/grad_cam/: grad_cam.py
vision_utils/metrics/: plotting.py
vision_utils/models/: simple_cnn.py
vision_utils/trainers/: train.py
